# smart-vehicle

./: .gitignore  docker-compose.yml  dump.rdb  pyproject.toml  shell.nix
src/smart_city/jobs/: main.py
